Fix spacing on homepage

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -38,6 +38,8 @@
 
 .home-text {
   width: 40%;
+  // height: 30%;
+  // align-items: space-evenly;
   font-family: $font;
   h2 {
     font-size: 3rem;
@@ -45,6 +47,7 @@
     padding-bottom: 10%;
   }
   p {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+    padding: 1% 0;
   }
 }
